2009-07-29	Joel Sherrill <joel.sherrill@oarcorp.com>

	* psxmsgq04/init.c: Add call to mq_unlink.

2009-07-29	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile.am, configure.ac: Add shell of new test.
	* psxmsgq04/.cvsignore, psxmsgq04/Makefile.am, psxmsgq04/init.c,
	psxmsgq04/psxmsgq04.doc, psxmsgq04/psxmsgq04.scn: New files.

2009-07-29	Joel Sherrill <joel.sherrill@OARcorp.com>

	* Makefile.am, configure.ac: Add test to address cases where a thread
	is waiting on a signal (sigwait) and we send it. Also address case
	where there are too many queued signals.
	* psxsignal03/.cvsignore, psxsignal03/Makefile.am, psxsignal03/init.c,
	psxsignal03/psxsignal03.doc, psxsignal03/psxsignal03.scn: New files.

2009-07-29	Joel Sherrill <joel.sherrill@OARcorp.com>

	* psxsignal02/init.c: Fix spacing.

2009-07-28	Santosh G Vattam <vattam.santosh@gmail.com>

	* psxmsgq01/init.c, psxmsgq01/psxmsgq01.scn: Add tests for various
	mq_timedreceive and mq_timedsend conditions. In particular test
	timeout in the past.

2009-07-28	Santosh G Vattam <vattam.santosh@gmail.com>

	* psx05/init.c, psx05/psx05.scn: Add test for pthread_mutex_timedlock
	with timeout in the past.

2009-07-24	Joel Sherrill <joel.sherrill@OARcorp.com>

	* psxsignal02/psxsignal02.scn: Fill in screen file.

2009-07-24	Joel Sherrill <joel.sherrill@OARcorp.com>

	* Makefile.am, configure.ac: Add new test to exercise algorithm to
	dispatch process wide signals to individual threads.
	* psxsignal02/.cvsignore, psxsignal02/Makefile.am, psxsignal02/init.c,
	psxsignal02/psxsignal02.doc, psxsignal02/psxsignal02.scn: New files.

2009-07-23	Joel Sherrill <joel.sherrill@OARcorp.com>

	* Makefile.am, configure.ac: Add test to exercise interrupt
	synchronization logic in _POSIX_Timer_Insert_helper that supports
	POSIX timers.
	* psxintrcritical01/.cvsignore, psxintrcritical01/Makefile.am,
	psxintrcritical01/init.c, psxintrcritical01/psxintrcritical01.doc,
	psxintrcritical01/psxintrcritical01.scn: New files.
