@@ -1,0 +1,24 @@
+#
+#  $Id$
+#
+#  COPYRIGHT (c) 1989-2009.
+#  On-Line Applications Research Corporation (OAR).
+#
+#  The license and distribution terms for this file may be
+#  found in the file LICENSE in this distribution or at
+#  http://www.rtems.com/license/LICENSE.
+#
+
+This file describes the directives and concepts tested by this test set.
+
+test set name:  psxkey02
+
+directives:
+
+  pthread_key_create
+  pthread_key_delete
+
+concepts:
+
++ Ensure that being unable to allocate the memory for the keys is properly
+  handled.
