@@ -1,0 +1,7 @@
+*** TEST KEY 02 ***
+Init - rtems_workspace_get_information - OK
+Init - pthread_key_create - ENOMEM
+Init - pthread_key_delete - OK
+Init - verify workspace has same memory
+*** END OF TEST KEY 02 ***
+
