@@ -1,3 +1,10 @@
+2009-07-30	Joel Sherrill <joel.sherrill@OARcorp.com>
+
+	* Makefile.am, configure.ac: Add new test for exercising running out of
+	memory while allocating the key pointers.
+	* psxkey02/.cvsignore, psxkey02/Makefile.am, psxkey02/init.c,
+	psxkey02/psxkey02.doc, psxkey02/psxkey02.scn: New files.
+
 2009-07-29	Joel Sherrill <joel.sherrill@oarcorp.com>
 
 	* psxmsgq04/init.c: Add call to mq_unlink.
